objects/LLC_BI__Product_Funding_Method_Type__c.object
<CustomObject>
    <description>This junction object enables a user to connect a funding method type to a product in the product catalog.</description>
    <fields>
        <fullName>LLC_BI__Failure_Message__c</fullName>
        <description>Administrators populate this rich text field with a &apos;failure&apos; message to display to a user upon failure funding of this funding method type.</description>
        <inlineHelpText>Enter a failure message for users that unsuccessfully fund their account.</inlineHelpText>
        <label>Failure Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Method_Type__c</fullName>
        <description>Administrators populate this master-detail relationship with the funding method type associated with the product.</description>
        <inlineHelpText>Select the funding method type associated with a product.</inlineHelpText>
        <label>Funding Method Type</label>
        <referenceTo>LLC_BI__Funding_Method_Type__c</referenceTo>
        <relationshipLabel>Product Funding Method Type Junctions</relationshipLabel>
        <relationshipName>Product_Funding_Method_Type_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookup_Key__c</fullName>
        <description>Administrators optionally populate this text field. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique identifier.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Funding_Amount__c</fullName>
        <description>Administrators populate this currency field with the maximum amount allowed to fund a product with the associated funding method type.</description>
        <inlineHelpText>Enter a maximum funding amount.</inlineHelpText>
        <label>Maximum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Funding_Amount__c</fullName>
        <description>Administrators populate this currency field with the minimum amount allowed to fund a product with the associated funding method type.</description>
        <inlineHelpText>Enter a minimum funding amount.</inlineHelpText>
        <label>Minimum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>Administrators populate this master-detail relationship with the product associated with the funding method type.</description>
        <inlineHelpText>Select a product associated with the funding method type</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Funding Method Type Junctions</relationshipLabel>
        <relationshipName>Product_Funding_Method_Type_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Success_Message__c</fullName>
        <description>Administrators populate this rich text field with a &apos;success&apos; message to display to a user upon successful funding of this funding method type.</description>
        <inlineHelpText>Enter a success message for users that successfully fund their account.</inlineHelpText>
        <label>Success Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Product Funding Method Type</label>
    <nameField>
        <displayFormat>PFMT-{000000}</displayFormat>
        <label>Product Funding Method Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Funding Method Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>